--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DEARTREE</title>
+  <title>Grace-xhw</title>
   <meta name="keywords" content="deartree,UI设计师">
-  <meta name="description" content="我叫Deartree，因为我想做一棵树，还需要很多关爱,所以这个名字就是我的人生理想了。我的职业是一名初长成的UI设计师，还在修炼中，请多指教。">
+  <meta name="description" content="我叫Grace，我的座右铭是'不要在该奋斗岁月里选择安逸'。一个偶然的瞬间，
+  代码走进了我的视野，吸引着我一步步地摸索，执着而不乏味......">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
   <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
