Rivising the homepage
add photo, title and subtitle

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Grace-xhw</title>
-  <meta name="keywords" content="deartree,UI设计师">
+  <meta name="keywords" content="前端 前端开发 web前端工程师">
   <meta name="description" content="我叫Grace，我的座右铭是'不要在该奋斗岁月里选择安逸'。一个偶然的瞬间，
   代码走进了我的视野，吸引着我一步步地摸索，执着而不乏味......">
+  <meta http-equiv="X-UA-Compatible" content="IE-edge,chrome=1">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
   <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
+  <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
   <script src="js/vendors/jquery.min.js"></script>
   <script src="js/vendors/jquery.easings.min.js"></script>
   <script type="text/javascript" src="js/vendors/jquery.slimscroll.min.js"></script>
@@ -28,7 +30,11 @@
     <li data-menuanchor="5thPage"><a href="#5thPage">Contact Me</a></li>
   </ul>
   <div id="fullpage">
-    <div class="section">Home</div>
+    <div class="section">
+      <img id="myPhoto" src="img/myPhoto1.jpg">
+      <h1 id="title">Hello, I'm Grace.</h1>
+      <h2 id="subtitle">Web Front-End Developer</h2>
+    </div>
     <div class="section">About Me</div>
     <div class="section">Skills</div>
     <div class="section" id='section4'>
