solve the former problems and revise the second page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="image icon" href="img/myPhoto2.jpg">
   <meta name="keywords" content="前端 前端开发 web前端工程师">
   <meta name="description" content="我叫Grace，我的座右铭是'不要在该奋斗岁月里选择安逸'。一个偶然的瞬间，
-  代码走进了我的视野，吸引着我一步步地摸索，执着而不乏味......">
+  代码走进了我的视野，吸引着我一步步地摸索，执着，求索......">
   <meta http-equiv="X-UA-Compatible" content="IE-edge,chrome=1">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
@@ -23,34 +23,63 @@
 </head>
 
 <body>
-  <!-- <ul id="menu">
-    <li data-menuanchor="firstPage" class="active list list-1"><a href="#firstPage">Home</a></li>
-    <li data-menuanchor="secondPage" class="list list-2"><a href="#secondPage">About Me</a></li>
-    <li data-menuanchor="3rdPage" class="list list-3"><a href="#3rdPage">Skills</a></li>
-    <li data-menuanchor="4thPage" class="list list-4"><a href="#4thPage">Project</a></li>
-    <li data-menuanchor="5thPage" class="list list-5"><a href="#5thPage">Contact Me</a></li>
-  </ul> -->
-
 <ul id="menu">
     <li data-menuanchor="firstPage" class="active list list-1"><a href="#firstPage">Home
-    <span class="tooltip"><i class="fa fa-home fa-rotate-90"></i></span></a></li>
+    <span class="tooltip"><i class="fa fa-home fa-2x fa-rotate-90"></i></span></a></li>
     <li data-menuanchor="secondPage" class="list list-2"><a href="#secondPage">About Me
-    <span class="tooltip"><i class="fa fa-fw fa-user"></i></span></a></li>
+    <span class="tooltip"><i class="fa fa-fw fa-2x fa-user"></i></span></a></li>
     <li data-menuanchor="3rdPage" class="list list-3"><a href="#3rdPage">Skills
-    <span class="tooltip"><i class="fa fa-fw fa-camera-retro fa-spin"></i></span></a></li>
+    <span class="tooltip"><i class="fa fa-fw fa-2x fa-laptop"></i></span></a></li>
     <li data-menuanchor="4thPage" class="list list-4"><a href="#4thPage">Project
-    <span class="tooltip"><i class="fa fa-fw fa-briefcase"></i></span></a></li>
+    <span class="tooltip"><i class="fa fa-fw fa-2x fa-briefcase"></i></span></a></li>
     <li data-menuanchor="5thPage" class="list list-5"><a href="#5thPage">Contact Me
-    <span class="tooltip"><i class="fa fa-fw fa-envelope"></i></span></a></li>
+    <span class="tooltip"><i class="fa fa-fw fa-2x fa-phone"></i></span></a></li>
 </ul> 
 
   <div id="fullpage">
     <div class="section">
       <img id="avatar" src="img/myPhoto1.jpg">
       <h1 id="title">Hello, I'm Grace.</h1>
+      <p id="add">A Diligent,Passionate,and Earnest</p>
       <h2 id="subtitle">Web Front-End Developer</h2>
     </div>
-    <div class="section">About Me</div>
+    <div class="section" id="section2">
+        <div class="about_me"><a href="#">ABOUT ME</a></div>
+        <div class="pic"><img src="img/photo3.jpg"></div>
+        <div class="infor">
+          <ul>
+            <li>&nbsp;&nbsp;姓名&nbsp;|&nbsp;王晓华--Grace</li>
+            <li>&nbsp;&nbsp;学历&nbsp;|&nbsp;本科</li>
+            <li>&nbsp;&nbsp;手机&nbsp;|&nbsp;15766915341</li>
+            <li>&nbsp;&nbsp;邮箱&nbsp;|&nbsp;1665334629@qq.com</li>
+            <li>&nbsp;&nbsp;现居&nbsp;|&nbsp;广东-广州</li>
+            <li>&nbsp;&nbsp;Blog&nbsp;|&nbsp;<a href="grace-xhw.github.io">点击访问</a></li>
+            <li>Github&nbsp;|&nbsp;<a href="github.com/Grace-xhw">点击访问</a></li>
+          </ul>
+
+          <p>我是一个酷爱学习，勤奋上进，稳重中又充满激情的女孩子。<br />
+          我的motto是：不要在该奋斗的年龄而选择了安逸.<br />
+          我的梦想是成为一名资深的前端攻城狮，就像幕课网上的老师，把<br />
+          技术分享给酷爱学习的小伙伴，让更多人的指尖迸发出力量。<br />
+          当然，那还很远，我现在还在起步阶段，还请前辈们多多指教！<br />
+          <br />
+          半年的前端开发经验，熟悉掌握HTML(5)、CSS(3)、Javascript；<br />
+          懂得使用jQuery、Bootstrap以及less框架，能熟练开发符合W3C<br />
+          标准的页面，懂得响应式设计；
+          懂得使用Git,目前正在学习Ajax.
+          </p>
+        </div>
+        <div class="skill">
+          <p>技能：<br />
+          <span></span> HTML(5)、CSS(3)、Javascript、jQuery、<br />
+          Bootstrap、less;<br />
+          <span></span>Photoshop、会声会影、及其它视/音频编辑软件；<br />
+          <span></span>Word、Excel、PowerPoint;<br />
+          <span></span>英语八级；<br />
+          <span></span>普通话二甲；<br />
+          </p>
+        </div>
+    </div>
     <div class="section">Skills</div>
     <div class="section" id='section4'>
       <div class="slide" id="slide1">
