--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Grace-xhw</title>
-  <link rel="image icon" href="img/myPhoto2.jpg">
+  <link rel="image icon" href="img/myPhoto2.JPG">
   <meta name="keywords" content="前端 前端开发 web前端工程师">
-  <meta name="description" content="我叫Grace，我的座右铭是'不要在该奋斗岁月里选择安逸'。一个偶然的瞬间，
-  代码走进了我的视野，吸引着我一步步地摸索，执着，求索......">
+  <meta name="description" content="我叫Grace，我的座右铭是'不要在该奋斗的岁月里选择安逸'。一个偶然的瞬间，
+  代码走进了我的视野，吸引着我一步步地摸索，执着而充满激情......">
   <meta http-equiv="X-UA-Compatible" content="IE-edge,chrome=1">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
@@ -21,16 +21,15 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 
 </head>
-
 <body>
 <ul id="menu">
     <li data-menuanchor="firstPage" class="active list list-1"><a href="#firstPage">Home
     <span class="tooltip"><i class="fa fa-home fa-2x fa-rotate-90"></i></span></a></li>
     <li data-menuanchor="secondPage" class="list list-2"><a href="#secondPage">About Me
     <span class="tooltip"><i class="fa fa-fw fa-2x fa-user"></i></span></a></li>
-    <li data-menuanchor="3rdPage" class="list list-3"><a href="#3rdPage">Skills
+    <li data-menuanchor="3rdPage" class="list list-3"><a href="#3rdPage">skills
     <span class="tooltip"><i class="fa fa-fw fa-2x fa-laptop"></i></span></a></li>
-    <li data-menuanchor="4thPage" class="list list-4"><a href="#4thPage">Project
+    <li data-menuanchor="4thPage" class="list list-4"><a href="#4thPage">Projects
     <span class="tooltip"><i class="fa fa-fw fa-2x fa-briefcase"></i></span></a></li>
     <li data-menuanchor="5thPage" class="list list-5"><a href="#5thPage">Contact Me
     <span class="tooltip"><i class="fa fa-fw fa-2x fa-phone"></i></span></a></li>
@@ -38,7 +37,7 @@
 
   <div id="fullpage">
     <div class="section">
-      <img id="avatar" src="img/myPhoto1.jpg">
+      <img id="avatar" src="img/myPhoto1.JPG">
       <h1 id="title">Hello, I'm Grace.</h1>
       <p id="add">A Diligent,Passionate,and Earnest</p>
       <h2 id="subtitle">Web Front-End Developer</h2>
@@ -48,13 +47,13 @@
         <div class="pic"><img src="img/photo3.jpg"></div>
         <div class="infor">
           <ul>
-            <li>&nbsp;&nbsp;姓名&nbsp;|&nbsp;王晓华--Grace</li>
-            <li>&nbsp;&nbsp;学历&nbsp;|&nbsp;本科</li>
-            <li>&nbsp;&nbsp;手机&nbsp;|&nbsp;15766915341</li>
-            <li>&nbsp;&nbsp;邮箱&nbsp;|&nbsp;1665334629@qq.com</li>
-            <li>&nbsp;&nbsp;现居&nbsp;|&nbsp;广东-广州</li>
-            <li>&nbsp;&nbsp;Blog&nbsp;|&nbsp;<a href="grace-xhw.github.io">点击访问</a></li>
-            <li>Github&nbsp;|&nbsp;<a href="github.com/Grace-xhw">点击访问</a></li>
+            <li><span>姓名</span> | 王晓华--Grace</li>
+            <li><span>学历</span> | 本科</li>
+            <li><span>学校</span> | 韩山师范学院</li>
+            <li><span>手机</span> | 15766915341</li>
+            <li><span>邮箱</span> | 1665334629@qq.com</li>
+            <li><span>现居</span> | 广东-广州</li>
+            <li><span>Github</span> | <a href="github.com/Grace-xhw">点击访问</a></li>
           </ul>
 
           <p>我是一个酷爱学习，勤奋上进，稳重中又充满激情的女孩子。<br />
@@ -107,7 +106,22 @@
       </div>
       <div class="slide" id="slide2"><h1>Side 2</h1></div>
     </div>
-    <div class="section">Contact Me</div>
+    <div class="section">
+      <div class="cont"><a href="#">CONTECT ME</a></div>
+        <div class="icon">
+          <p>快把我收到碗里吧<br />
+            <a href="mailto:2220543817@qq.com" hidefocus="true">2220543817@qq.com</a>
+          </p>
+          <ul>
+            <li><a href="#"><img src="img/weixin.jpg"></a></li>
+            <li><a href="#"><img src="img/QQ.jpg"></a></li>
+            <li><a href="#"><img src="img/phone.png"></a></li>
+            <li><a href="#"><img src="img/mail2.png"></a></li>
+            <li><a href="#"><img src="img/git.jpg"></a></li>
+          </ul>
+        </div>
+    </div>
   </div>
 </body>
 </html>
+
