add responsive effect

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel=stylesheet href="css/style.css">
+  <link rel=stylesheet href="css/responsive.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/menu.js"></script>
 
@@ -63,7 +64,7 @@
             </div>
             <div class="page" id="p4">
               <ul class="contact-icon">
-                <li><a href="#" title="grace_xhw"><img src="img/weixin.jpg"></a></li>
+                <li><a href="javascript:;" title="grace_xhw"><img src="img/weixin.jpg"></a></li>
                 <li><a target="_blank" href="tencent://message/?uin=1665334629&Site=&menu=yes"><img src="img/QQ.jpg"></a></li>
                 <li><a href="tel://15766915341"><img src="img/phone.png"></a></li>
                 <li><a href="mailto:1665334629@qq.com"><img src="img/mail2.png"></a></li>
