add details to page2 and page3

--- a/index.html
+++ b/index.html
@@ -10,11 +10,23 @@
   代码走进了我的视野，吸引着我一步步地摸索，执着而充满激情......">
   <meta http-equiv="X-UA-Compatible" content="IE-edge,chrome=1">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <!-- jquery  -->
+  <script src="js/jquery.min.js"></script>
+
+  <!-- baidu echarts -->
+  <!-- http://echarts.baidu.com/doc/start.html -->
+  <script src="js/echarts-all.js"></script>
+  <script src='js/skill_clound.js'></script>
+
+  <!-- menu -->
+  <script src="js/menu.js"></script>
+
+  <!-- font-awesome  -->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+  <!-- css -->
   <link rel=stylesheet href="css/style.css">
   <link rel=stylesheet href="css/responsive.css">
-  <script src="js/jquery.min.js"></script>
-  <script src="js/menu.js"></script>
 
 </head>
 <body>
@@ -57,10 +69,72 @@
               <h2 id="subtitle">Web Front-End Developer</h2>
             </div>
             <div class="page" id="p2">
-              <li class="icon fa fa-fw fa-2x fa-laptop"><span class="title">Skills</span></li >
+              <!-- <li class="icon fa fa-fw fa-2x fa-laptop"><span class="title">Skills</span></li > -->
+              <div id="skill_clound"></div>
             </div>
             <div class="page" id="p3">
-              <li class="icon fa fa-fw fa-2x fa-briefcase"><span class="title">Projects</span></li>
+              <!-- <li class="icon fa fa-fw fa-2x fa-briefcase"><span class="title">Projects</span></li> -->
+              <div class="container">
+                <div class="card">
+                  <div class="face front">
+                    <img class="flip-img" src="img/myPhoto1.JPG">
+                  </div>
+                  <div class="face back">
+                    <p>Web Ascender is an innovation services company that truly cares about your happiness and the success of your project. We are leaders in web development, mobile applications and internet marketing, but our team doesn't just make beautiful digital products. We successfully solve real problems for people and businesses.</p>
+                    <a href="#" class="btn btn-block btn-outline">More &rsaquo;</a>
+                  </div>
+                </div>
+
+                <div class="card">
+                  <div class="face front">
+                    <img class="flip-img" src="img/myPhoto1.JPG">
+                  </div>
+                  <div class="face back">
+                    <p>Web Ascender is an innovation services company that truly cares about your happiness and the success of your project. We are leaders in web development, mobile applications and internet marketing, but our team doesn't just make beautiful digital products. We successfully solve real problems for people and businesses.</p>
+                    <a href="#" class="btn btn-block btn-outline">More &rsaquo;</a>
+                  </div>
+                </div>
+
+                <div class="card">
+                  <div class="face front">
+                    <img class="flip-img" src="img/myPhoto1.JPG">
+                  </div>
+                  <div class="face back">
+                    <p>Web Ascender is an innovation services company that truly cares about your happiness and the success of your project. We are leaders in web development, mobile applications and internet marketing, but our team doesn't just make beautiful digital products. We successfully solve real problems for people and businesses.</p>
+                    <a href="#" class="btn btn-block btn-outline">More &rsaquo;</a>
+                  </div>
+                </div>
+
+                <div class="card">
+                  <div class="face front">
+                    <img class="flip-img" src="img/myPhoto1.JPG">
+                  </div>
+                  <div class="face back">
+                    <p>Web Ascender is an innovation services company that truly cares about your happiness and the success of your project. We are leaders in web development, mobile applications and internet marketing, but our team doesn't just make beautiful digital products. We successfully solve real problems for people and businesses.</p>
+                    <a href="#" class="btn btn-block btn-outline">More &rsaquo;</a>
+                  </div>
+                </div>
+
+                <div class="card">
+                  <div class="face front">
+                    <img class="flip-img" src="img/myPhoto1.JPG">
+                  </div>
+                  <div class="face back">
+                    <p>Web Ascender is an innovation services company that truly cares about your happiness and the success of your project. We are leaders in web development, mobile applications and internet marketing, but our team doesn't just make beautiful digital products. We successfully solve real problems for people and businesses.</p>
+                    <a href="#" class="btn btn-block btn-outline">More &rsaquo;</a>
+                  </div>
+                </div>
+
+                <div class="card">
+                  <div class="face front">
+                    <img class="flip-img" src="img/myPhoto1.JPG">
+                  </div>
+                  <div class="face back">
+                    <p>Web Ascender is an innovation services company that truly cares about your happiness and the success of your project. We are leaders in web development, mobile applications and internet marketing, but our team doesn't just make beautiful digital products. We successfully solve real problems for people and businesses.</p>
+                    <a href="#" class="btn btn-block btn-outline">More &rsaquo;</a>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="page" id="p4">
               <ul class="contact-icon">
