complete the resume

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
   <!-- baidu echarts -->
   <!-- http://echarts.baidu.com/doc/start.html -->
-  <script src="js/echarts-all.js"></script>
+  <script src="http://echarts.baidu.com/build/dist/echarts.js"></script>
+  <!-- <script src="js/echarts-all.js"></script> -->
   <script src='js/skill_clound.js'></script>
 
   <!-- menu -->
@@ -70,77 +71,84 @@
             </div>
             <div class="page" id="p2">
               <!-- <li class="icon fa fa-fw fa-2x fa-laptop"><span class="title">Skills</span></li > -->
-              <div id="skill_clound"></div>
+              <div id="skill_clound" style="height: 100%;"></div>
             </div>
             <div class="page" id="p3">
               <!-- <li class="icon fa fa-fw fa-2x fa-briefcase"><span class="title">Projects</span></li> -->
               <div class="container">
                 <div class="card">
                   <div class="face front">
-                    <img class="flip-img" src="img/myPhoto1.JPG">
+                    <img class="flip-img" src="img/img1.jpg">
                   </div>
                   <div class="face back">
-                    <p>Web Ascender is an innovation services company that truly cares about your happiness and the success of your project. We are leaders in web development, mobile applications and internet marketing, but our team doesn't just make beautiful digital products. We successfully solve real problems for people and businesses.</p>
-                    <a href="#" class="btn btn-block btn-outline">More &rsaquo;</a>
+                    <p>整个project里面的6个练习项目，有梯度地反映了本人前端技术破茧成蝶的过程。幕课网首页是我跟着视频，一步步实操完成的，让我切实体会到html、css、js在网页开发中的综合运用。
+                    <br/>反思与收获：对html、css、js的运用有所掌握。</p>
+                    <a href="projects/imooc/index.html" class="btn btn-block btn-outline">查看详情 &rsaquo;</a>
                   </div>
                 </div>
 
                 <div class="card">
                   <div class="face front">
-                    <img class="flip-img" src="img/myPhoto1.JPG">
+                    <img class="flip-img" src="img/img2.png">
                   </div>
                   <div class="face back">
-                    <p>Web Ascender is an innovation services company that truly cares about your happiness and the success of your project. We are leaders in web development, mobile applications and internet marketing, but our team doesn't just make beautiful digital products. We successfully solve real problems for people and businesses.</p>
-                    <a href="#" class="btn btn-block btn-outline">More &rsaquo;</a>
+                    <p style="font-size: 13px;">该首页是我第一个独立布局，并自行编写完工的网页，主要包括导航、幻灯片、注册登录、装修攻略详情、效果图相册、论坛版块及邮件订阅等功能，主要运用HTML、CSS、Javascript、jQuery和Bootstrap等。
+                    <br/>反思与不足：初步掌握并能独立运用W3C标准布局，熟悉掌握html、css等；不足在于编写过程中出现了“类”的滥用，须改正。
+                    </p>
+                    <a href="projects/qy/index.html" class="btn btn-block btn-outline">查看详情 &rsaquo;</a>
                   </div>
                 </div>
 
                 <div class="card">
                   <div class="face front">
-                    <img class="flip-img" src="img/myPhoto1.JPG">
+                    <img class="flip-img" src="img/img3.jpg">
                   </div>
                   <div class="face back">
-                    <p>Web Ascender is an innovation services company that truly cares about your happiness and the success of your project. We are leaders in web development, mobile applications and internet marketing, but our team doesn't just make beautiful digital products. We successfully solve real problems for people and businesses.</p>
-                    <a href="#" class="btn btn-block btn-outline">More &rsaquo;</a>
+                    <p>该网页吸取了上次的经验教训，优化了“类”的使用，页面相对简单，主要包括导航、表单、正文、页脚和版权部分，仅用了html和css。
+                    <br/>反思与不足：理解并掌握了"clear:both"清除浮动的作用。
+                    </p>
+                    <a href="projects/chart/index.html" class="btn btn-block btn-outline">查看详情 &rsaquo;</a>
                   </div>
                 </div>
 
                 <div class="card">
                   <div class="face front">
-                    <img class="flip-img" src="img/myPhoto1.JPG">
+                    <img class="flip-img" src="img/img4.png">
                   </div>
                   <div class="face back">
-                    <p>Web Ascender is an innovation services company that truly cares about your happiness and the success of your project. We are leaders in web development, mobile applications and internet marketing, but our team doesn't just make beautiful digital products. We successfully solve real problems for people and businesses.</p>
-                    <a href="#" class="btn btn-block btn-outline">More &rsaquo;</a>
+                    <p>本网页主要包括导航、幻灯片、作品展示区和优秀作者部分，较多地用到js 和jQuery,包括引入插件和自行编写。
+                    </br>反思与不足：对js、jQuery插件的引入基本掌握，能初步编写js.</p>
+                    <a href="#" class="btn btn-block btn-outline">查看详情 &rsaquo;</a>
                   </div>
                 </div>
 
                 <div class="card">
                   <div class="face front">
-                    <img class="flip-img" src="img/myPhoto1.JPG">
+                    <img class="flip-img" src="img/img5.png">
                   </div>
                   <div class="face back">
-                    <p>Web Ascender is an innovation services company that truly cares about your happiness and the success of your project. We are leaders in web development, mobile applications and internet marketing, but our team doesn't just make beautiful digital products. We successfully solve real problems for people and businesses.</p>
-                    <a href="#" class="btn btn-block btn-outline">More &rsaquo;</a>
+                    <p>该网页内容较多、较细，工程量大，主要运用css和js。
+                    <br/>反思与不足：对js/css的掌握进一步提升；不足之处在于对js的理解和编写还远远不够，须继续学习。</p>
+                    <a href="#" class="btn btn-block btn-outline">查看详情 &rsaquo;</a>
                   </div>
                 </div>
 
                 <div class="card">
                   <div class="face front">
-                    <img class="flip-img" src="img/myPhoto1.JPG">
+                    <img class="flip-img" src="img/img6.png">
                   </div>
                   <div class="face back">
-                    <p>Web Ascender is an innovation services company that truly cares about your happiness and the success of your project. We are leaders in web development, mobile applications and internet marketing, but our team doesn't just make beautiful digital products. We successfully solve real problems for people and businesses.</p>
-                    <a href="#" class="btn btn-block btn-outline">More &rsaquo;</a>
+                    <p>这个个人简历主要运用HTML、CSS(transform,transition,translate), jQuery等简单实现flip card, menu等功能；结合target伪类实现不同页面切换效果；用百度echarts的word cloud实现技能展示功能；用刚学习的responsive简单做了响应式设计。</p>
+                    <a href="/" class="btn btn-block btn-outline">查看详情 &rsaquo;</a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="page" id="p4">
               <ul class="contact-icon">
-                <li><a href="javascript:;" title="grace_xhw"><img src="img/weixin.jpg"></a></li>
+                <li><a href="javascript:;" class="tooltips"><span>我的微信:grace_xhw</span><img src="img/weixin.jpg"></a></li>
                 <li><a target="_blank" href="tencent://message/?uin=1665334629&Site=&menu=yes"><img src="img/QQ.jpg"></a></li>
-                <li><a href="tel://15766915341"><img src="img/phone.png"></a></li>
+                <li><a href="tel://15766915341" ><img src="img/phone.png"></a></li>
                 <li><a href="mailto:1665334629@qq.com"><img src="img/mail2.png"></a></li>
                 <li><a href="https://github.com/grace-xhw"><img src="img/git.jpg"></a></li>
               </ul>
