--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
   <meta charset="UTF-8">
   <title>Grace-xhw</title>
   <!-- <link rel="image icon" href="img/myPhoto2.JPG"> -->
@@ -10,6 +9,10 @@
   代码走进了我的视野，吸引着我一步步地摸索，执着而充满激情......">
   <meta http-equiv="X-UA-Compatible" content="IE-edge,chrome=1">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <!--[if lt IE 9]>
+    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+  <![endif]-->
+
   <!-- jquery  -->
   <script src="js/jquery.min.js"></script>
 
@@ -17,7 +20,7 @@
   <!-- http://echarts.baidu.com/doc/start.html -->
   <script src="http://echarts.baidu.com/build/dist/echarts.js"></script>
   <!-- <script src="js/echarts-all.js"></script> -->
-  <script src='js/skill_clound.js'></script>
+  <script src='js/skill_cloud.js'></script>
 
   <!-- menu -->
   <script src="js/menu.js"></script>
@@ -39,11 +42,11 @@
             <div class="show-menu">
               <div class="parent2">
                 <div class="test1"><a href="#t1"><i class="fa fa-user fa-2x menu-icon"></a></i>
-              </div>
-              <div class="test2"><a href="#t2"><i class="fa fa-laptop fa-2x menu-icon"></i></a></div>
-              <div class="test3"><a href="#t3"><i class="fa fa-briefcase fa-2x menu-icon"></i></a></div>
-              <div class="test4"><a href="#t4"><i class="fa fa-phone fa-2x menu-icon"></a></i></div>
-              <div class="mask2"><i class="fa fa-bars fa-2x"></i></div>
+                </div>
+                <div class="test2"><a href="#t2"><i class="fa fa-laptop fa-2x menu-icon"></i></a></div>
+                <div class="test3"><a href="#t3"><i class="fa fa-briefcase fa-2x menu-icon"></i></a></div>
+                <div class="test4"><a href="#t4"><i class="fa fa-phone fa-2x menu-icon"></a></i></div>
+                <div class="mask2"><i class="fa fa-bars fa-2x"></i></div>
               </div>
             </div>
             <ul class="menu-list">
@@ -71,7 +74,7 @@
             </div>
             <div class="page" id="p2">
               <!-- <li class="icon fa fa-fw fa-2x fa-laptop"><span class="title">Skills</span></li > -->
-              <div id="skill_clound" style="height: 100%;"></div>
+              <div id="skill_cloud" style="height: 100%;"></div>
             </div>
             <div class="page" id="p3">
               <!-- <li class="icon fa fa-fw fa-2x fa-briefcase"><span class="title">Projects</span></li> -->
