revise the error of copyright

--- a/projects/chart/index.html
+++ b/projects/chart/index.html
@@ -127,7 +127,7 @@
 		</div>
 		<div class="copyright">
 			<div class="center">
-				<p>Copyright &copy;&copy; 2013 Praxair Technology, Inc. All Rights Reserved.</p>
+				<p>Copyright &copy; 2013 Praxair Technology, Inc. All Rights Reserved.</p>
 			</div>
 		</div>
 	</div>
