add the link of Lenovo

--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                     <img class="flip-img" src="img/img5.png">
                   </div>
                   <div class="face back">
-                    <p>该网页内容较多、较细，工程量大，主要运用css和js。
+                    <p>该网页制作较精细，主要运用css和js。其中幻灯片部分，我尝试用carousel进行css重设，代替直接引入flexslider。Ribbon部分主要运用伪类制作。
                     <br/>反思与不足：对js/css的掌握进一步提升；不足之处在于对js的理解和编写还远远不够，须继续学习。</p>
-                    <a href="#" class="btn btn-block btn-outline">查看详情 &rsaquo;</a>
+                    <a href="projects/Lenovo/index.html" class="btn btn-block btn-outline">查看详情 &rsaquo;</a>
                   </div>
                 </div>
 
