--- a/projects/Lenovo/index.html
+++ b/projects/Lenovo/index.html
@@ -8,8 +8,9 @@
 	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/carousel.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <!-- Latest compiled and minified CSS -->
+     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -489,7 +490,7 @@
 				<a class="promoBtn" href="#"><img src="images/voteOnChallenge.png"></a>
 			</div>
 			<div class="carousel-caption">
-				<h3>WHAT WOULD YOU <span>DO?</span></h3>
+				<h3>WHAT WOULD YOU <span>LIKE?</span></h3>
 				<p>WITH 4 AMAZING MODES & 1 INCREDIBLE MACHINE</p> 
 			</div>
           </div>
