--- a/projects/qy/index.html
+++ b/projects/qy/index.html
@@ -6,10 +6,10 @@
   <title>
       装修计划--装修助手--经装修
     </title> 
-  <link rel="stylesheet" type="text/css" href="css/style.css" /> 
-  <link rel="stylesheet" type="text/css" href="css/carousel.css" /> 
-  <script src="js/jquery-2.1.4.min.js">
-    </script> 
+ 
+  <link rel="stylesheet" type="text/css" href="css/carousel.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />  
+  <script src="js/jquery-2.1.4.min.js"></script> 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" /> 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
     </script> 
